fix dark mode ruining everything

--- a/wikiwalk-ui/src/index.css
+++ b/wikiwalk-ui/src/index.css
@@ -4,7 +4,6 @@
   font-family: 'JetBrains Mono', sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  color-scheme: light dark;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
